try using custom class for <Allele,VariantInfo>